# simple-queries

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
cpp/: .gitignore  Makefile  run.sh
cpp/src/: main.cpp  super.cpp  super.h  test_super.cpp
go/: Makefile  go.mod  main.go  main_test.go  run.sh
prompts/: clone.md
python/: Makefile  run.sh  super_cli.py  test_super.py
rust/: Cargo.toml  Makefile  run.sh
rust/docs/plans/: 2026-02-16-openai-caller-design.md  2026-02-16-openai-caller-plan.md
rust/src/: main.rs
typescript/: Makefile  package-lock.json  package.json  run.sh
typescript/src/: main.test.ts  main.ts
