[package]
name = "super_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "super"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
